Stats: Add Variable creation & fix security issues.

--- a/templates/managevariables.html
+++ b/templates/managevariables.html
@@ -46,6 +46,6 @@
     <p> How now, brown cow? (No more variables) </p>
 {% endif %}
 
-    <a href="{{baseurl}}/manage/script/new">Create a new script</a>
+    <a href="{{baseurl}}/manage/variable/new">Create a new variable</a>
 
 {% endblock %}
